[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameAssets/Dungeon Platform.png" type="Texture" id=1]
[ext_resource path="res://GameAssets/Dungeon Platform-1.png.png" type="Texture" id=2]
[ext_resource path="res://GameAssets/arrow.png" type="Texture" id=3]
[ext_resource path="res://GameObjects/MovingPlatform.gd" type="Script" id=4]
[ext_resource path="res://GameAssets/Fonts/Silkscreen/Silkscreen-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 101.5, 8 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="MovingPlatform" type="Node2D" groups=["movingPlatform"]]
z_index = 20
script = ExtResource( 4 )

[node name="Platform1" type="KinematicBody2D" parent="."]
position = Vector2( 139, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform1"]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="Platform1"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Platform1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform1/Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 45, 0 )
texture = ExtResource( 3 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 69, 0 )
texture = ExtResource( 3 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 93, 0 )
texture = ExtResource( 3 )
flip_h = true

[node name="After" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 139, 0 )

[node name="Position2" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 69.5, 0 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_top = -22.0
margin_right = 140.0
margin_bottom = -8.0
theme = SubResource( 5 )
text = "Right-Click to sell for $90"

[connection signal="area_entered" from="Platform1/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Platform1/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Platform1/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
